welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:-31: error: Unmatched closing brace '}' ignored here
	}
        ^MethodsDogHouse:-27: error: illegal start of statement (no modifiers allowed here)
	override def left() {
        ^MethodsDogHouse:54: error: '(' expected but '}' found.
 	}
        ^